--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "unit_4_block_37",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
+  "name": "unit_4_block_37",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
       "start": "node server",
-      "start:dev": "NODE_ENV=development nodemon server"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
+      "start:dev": "NODE_ENV=development nodemon server --legacy-watch"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
       "nodemon": "^3.0.3"
-    },
-    "dependencies": {
+  },
+  "dependencies": {
+      "bcrypt": "^5.1.1",
       "express": "^4.18.2",
-      "pg": "^8.11.3"
-    }
+      "jsonwebtoken": "^9.0.2",
+      "morgan": "^1.10.0",
+      "pg": "^8.11.3",
+      "uuid": "^9.0.1"
   }
-  
+}
